0.9.0.dev0/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py:


Analysis CP NMR spectra
=======================
Example with handling of a series of CP NMR spectra.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 16-17

.. code-block:: Python
   :dedent: 1









.. GENERATED FROM PYTHON SOURCE LINES 19-21

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 24-27

Import NMR spectra
------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: Python

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "CP"








.. GENERATED FROM PYTHON SOURCE LINES 31-34

Set the `glob` pattern in order to load a series of spectra of given type
in the given directory (here we read fid, but we could also read "1r" files
when available)

.. GENERATED FROM PYTHON SOURCE LINES 34-36

.. code-block:: Python

    dataset = scp.nmr.read_topspin(nmrdir, glob="**/fid")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/.venv/lib/python3.13/site-packages/spectrochempy/core/readers/importer.py:226: UserWarning: No module named 'spectrochempy_hypercomplex'
      warning_(str(e))




.. GENERATED FROM PYTHON SOURCE LINES 37-38

15 fids have been read and merged into a single dataset

.. GENERATED FROM PYTHON SOURCE LINES 38-40

.. code-block:: Python

    dataset








.. GENERATED FROM PYTHON SOURCE LINES 41-46

The new dimension (y) have several coordinates corresponding to all metadata that change from fid to fid.

In the present case, the relevant coordinates is given by the `p15` array which is the array of CP contact times.

To have y using this coordinates, we need to select it

.. GENERATED FROM PYTHON SOURCE LINES 46-48

.. code-block:: Python

    dataset.y.select(3)



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py", line 46, in <module>
        dataset.y.select(3)
        ^^^^^^^^^
    AttributeError: 'NoneType' object has no attribute 'y'




.. GENERATED FROM PYTHON SOURCE LINES 49-50

plot the dataset (zoom on the begining of the fid)

.. GENERATED FROM PYTHON SOURCE LINES 50-55

.. code-block:: Python

    prefs = scp.preferences
    prefs.figure.figsize = (9, 4)
    ax = dataset.plot(colorbar=True)
    ax.set_xlim(0, 5000)


.. GENERATED FROM PYTHON SOURCE LINES 56-57

Process a fourier transform along the x dimension

.. GENERATED FROM PYTHON SOURCE LINES 57-61

.. code-block:: Python


    # exponential multiplication
    nd1 = scp.em(dataset, lb=50)


.. GENERATED FROM PYTHON SOURCE LINES 62-63

fourier transform

.. GENERATED FROM PYTHON SOURCE LINES 63-65

.. code-block:: Python

    nd2 = scp.fft(nd1, si=4096)


.. GENERATED FROM PYTHON SOURCE LINES 66-67

perform a phase correction of order 0 (need to be tuned carefully)

.. GENERATED FROM PYTHON SOURCE LINES 67-69

.. code-block:: Python

    nd3 = scp.pk(nd2, phc0=-118)


.. GENERATED FROM PYTHON SOURCE LINES 70-71

plot

.. GENERATED FROM PYTHON SOURCE LINES 71-72

.. code-block:: Python

    _ = nd3.plot()

.. GENERATED FROM PYTHON SOURCE LINES 73-75

## Baseline correction
Here we use the snip algorithm

.. GENERATED FROM PYTHON SOURCE LINES 75-81

.. code-block:: Python

    nd4 = scp.snip(nd3, snip_width=200)

    ax = nd4.plot()
    ax.set_xlim(225, 25)
    ax.set_ylim(-1, 10)


.. GENERATED FROM PYTHON SOURCE LINES 82-84

## Peak peaking
we will use here the max of each spectra

.. GENERATED FROM PYTHON SOURCE LINES 84-87

.. code-block:: Python

    peaks, properties = nd4.max(dim=0).find_peaks(height=2.0, width=0.5, wlen=33.0)
    print(f"position of the peaks : {peaks.x.data}")


.. GENERATED FROM PYTHON SOURCE LINES 88-89

properties of the peaks

.. GENERATED FROM PYTHON SOURCE LINES 89-98

.. code-block:: Python

    table_pos = "  ".join([f"{peaks[i].x.value.m:>10.3f}" for i in range(len(peaks))])
    print(f"{'peak_position (cm⁻¹)':>26}: {table_pos}")
    for key in properties:
        table_property = "  ".join(
            [f"{properties[key][i].m:>10.3f}" for i in range(len(peaks))]
        )
        title = f"{key:>.16} ({properties[key][0].u:~P})"
        print(f"{title:>26}: {table_property}")


.. GENERATED FROM PYTHON SOURCE LINES 99-100

plot with peak markers and the left/right-bases indicators

.. GENERATED FROM PYTHON SOURCE LINES 100-125

.. code-block:: Python

    ax = nd4.plot()  # output the spectrum on ax. ax will receive next plot too;
    pks = peaks + 0.5  # add a small offset on the y position of the markers
    pks.plot_scatter(
        ax=ax,
        marker="v",
        color="black",
        clear=False,  # we need to keep the previous output on ax
        data_only=True,  # we don't need to redraw all things like labels, etc...
        ylim=(-0.1, 13),
        xlim=(225, 25),
    )
    for i, p in enumerate(pks):
        x, y = p.x.values.m, (p + 0.5).values.m
        ax.annotate(
            f"{x:0.1f}",
            xy=(x, y),
            xytext=(-5, 5),
            rotation=90,
            textcoords="offset points",
        )
        for w in (properties["left_bases"][i], properties["right_bases"][i]):
            ax.axvline(w.m, linestyle="--", color="green")
        for w in (properties["left_ips"][i], properties["right_ips"][i]):
            ax.axvline(w.m, linestyle=":", color="red")


.. GENERATED FROM PYTHON SOURCE LINES 126-127

Get the section at once using fancy indexing

.. GENERATED FROM PYTHON SOURCE LINES 127-137

.. code-block:: Python

    sections = nd4[:, peaks.x.data]

    # The array sections has a shape (15, 3).
    # We must transpose it to plot the three sections has a function of contact time
    sections = sections.T

    # now plot it
    ax = sections.plot(marker="o", lw="1", ls=":", legend="best", colormap="jet")
    ax.set_xlim(0, 16000)


.. GENERATED FROM PYTHON SOURCE LINES 138-141

The sections we have taken here represent the maximum heigths of the peaks.
However it could may be interesting to have the area of the peak instead.
Let's use the left and right bases to perform the integration of the peaks.

.. GENERATED FROM PYTHON SOURCE LINES 141-157

.. code-block:: Python

    area = []
    for i in range(len(peaks)):
        lb, ub = properties["left_bases"][i].m, properties["right_bases"][i].m
        a = nd4[:, lb:ub].simpson()
        area.append(a)

    area = scp.NDDataset(
        area,
        dims=["y", "x"],
        coordset=scp.CoordSet({"y": peaks.x.copy(), "x": nd4.y.default.copy()}),
        units=a.units,
        title="area",
    )
    _ = area.plot(marker="o", lw="1", ls=":", legend="best", colormap="jet")
    area


.. GENERATED FROM PYTHON SOURCE LINES 158-159

Fitting a model to these data

.. GENERATED FROM PYTHON SOURCE LINES 159-176

.. code-block:: Python

    import numpy as np

    # create an Optimize object using a simple leastsq method
    fitter = scp.Optimize(log_level="INFO", method="leastsq")


    # define a model
    # Note: This is only for sake of demonstration,
    # as the model is probably not sufficient to fit the data correctly.
    def cp_model(t, i0, tis, t1irho):  # warning: no underscore in variable names
        I = i0 * (np.exp(-t / t1irho) - np.exp(-t * (1 / tis))) / (1 - tis / t1irho)
        return I


    # Add the model to the fitter usermodels as it it not a built-in model
    fitter.usermodels = {"CP_model": cp_model}


.. GENERATED FROM PYTHON SOURCE LINES 177-206

.. code-block:: Python

    index = 0
    s = area[index]

    # Define the parameter variables using a script
    # (parameter: value, low_bound,  high_bound)
    # - no underscore in parameters names.
    # - times are in the units of the data time coordinates (here `s`)
    # - initially we assume relaxation (T1rho) time constant vey large
    fitter.script = """
     MODEL: cp
     shape: cp_model
    	$ i0:     25, 0.1, none
    	$ t1irho: 1e4, 1, none
    	$ tis:  800, 1, 10000
    """

    fitter.fit(s)

    spred = fitter.predict()

    ax = fitter.plotmerit(
        s,
        spred,
        method="scatter",
        show_yaxis=True,
        title=f"fitting CP dynamic (peaks at {peaks.x[index].values})",
    )
    ax.set_xlim(0, 16000)


.. GENERATED FROM PYTHON SOURCE LINES 207-230

.. code-block:: Python

    index = 1
    s = area[index]
    fitter.script = """
     MODEL: cp
     shape: cp_model
    	$ i0:     35, 0.1, none
    	$ t1irho: 1e4, 1, none
    	$ tis:  800, 1, 10000
    """

    fitter.fit(s)

    spred = fitter.predict()

    ax = fitter.plotmerit(
        s,
        spred,
        method="scatter",
        show_yaxis=True,
        title=f"fitting CP dynamic (peaks at {peaks.x[index].values})",
    )
    ax.set_xlim(0, 16000)


.. GENERATED FROM PYTHON SOURCE LINES 231-254

.. code-block:: Python

    index = 2
    s = area[index]
    fitter.script = """
     MODEL: cp
     shape: cp_model
    	$ i0:     125, 0.1, none
    	$ t1irho: 1e4, 1, none
    	$ tis:  800, 1, 10000
    """

    fitter.fit(s)

    spred = fitter.predict()

    ax = fitter.plotmerit(
        s,
        spred,
        method="scatter",
        show_yaxis=True,
        title=f"fitting CP dynamic (peaks at {peaks.x[index].values})",
    )
    ax.set_xlim(0, 16000)


.. GENERATED FROM PYTHON SOURCE LINES 255-258

The model looks good for the peak at 174 ppm. This peak appears to be composed of a single species,
which is not the case for the other peaks at 99 and 70 ppm.
Deconvolution of these two peaks is therefore probably necessary for a better analysis.

.. GENERATED FROM PYTHON SOURCE LINES 260-262

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 262-264

.. code-block:: Python


    # scp.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.072 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py <plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.zip <plot_spectrochempy_nmr__processing__nmr__plot_processing_cp_nmr.zip>`
